--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ body  {
 			</div>
 
 			<div class="address">
-				<p><span>To:</span> <span>My Love</span></p>
-				<p><span>From:</span> <span>Your Favorite Person</span></p>
+				<p><span>To:</span> <span>Fernanda Irias</span></p>
+				<p><span>From:</span> <span>Jahir San Martin</span></p>
 			</div>
 
 		</div>
